# GoDeMind

./: .gitattributes
code/: Main.cpp
docs/: readme.md
envi/: CMakeLists.txt  clang-format.yaml
